--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -1,229 +1,163 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "1",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54f53763-df0c-4312-b6a2-d72b9f37662e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Elasto-Plastic Tutorial: Multiple Strain Increments"
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the project root to the Python path\n",
+    "sys.path.append(os.path.abspath(os.path.join('..', '..')))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "a68990eb-c64b-47ac-9e78-1cf2e9d08c4c",
    "metadata": {},
    "source": [
-    "This tutorial demonstrates how to run examples using both isotropic and kinematic hardening models with multiple strain increments."
+    "# Elasto-Plastic Material Models with Isotropic and Kinematic Hardening\n",
+    "This tutorial demonstrates the implementation of isotropic and kinematic hardening models for elasto-plastic materials. The examples will run the models using different material properties and strain increments to showcase their behaviors under various loading conditions."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "3fc16df2-56b7-426a-b7f6-52983a14a537",
    "metadata": {},
    "source": [
-    "## Example 1: Isotropic Hardening with Multiple Strain Increments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4",
-   "metadata": {},
-   "source": [
-    "This example simulates the behavior of a material with isotropic hardening. We will run the model over multiple strain increments and observe how the stress and plastic strain evolve."
+    "## Example 1: Isotropic Hardening with Small Strain Increments\n",
+    "This example demonstrates the behavior of an isotropic hardening material with small strain increments. The stress-strain behavior will be tracked over several increments of strain."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8f8a83de-e1a4-4a92-9c56-f73e94d4ff97",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from src.elastoplastic.elastoplastic_functions import IsotropicHardeningModel, KinematicHardeningModel\n",
+    "from src.elastoplastic.elastoplastic_functions import IsotropicHardeningModel\n",
     "\n",
     "def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
     "    model = IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    Y_list = []\n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, Y = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        Y_list.append(Y)\n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(Y_list)\n",
+    "    sig, ep, Y = model.compute_stress(strain_increments)\n",
+    "    return sig, ep, Y\n",
     "\n",
-    "strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
+    "strain_increments = [0.001] * 50  # Small strain increments\n",
     "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
-    "sig, ep, Y"
+    "sig[-1], ep[-1], Y[-1]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "27f6b02f-fb79-4704-b3b1-53a231a2b56f",
    "metadata": {},
    "source": [
-    "### Example 1 Output\n",
-    "The following outputs show the evolution of stress, plastic strain, and back stress (Y) over the strain increments."
+    "### Results from Example 1\n",
+    "The final stress, plastic strain, and hardening variable are displayed as the result of applying small strain increments under isotropic hardening conditions."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "b8b85ef1-d8db-4683-b4f9-558967ebcd24",
    "metadata": {},
    "source": [
-    "## Example 2: Isotropic Hardening with Larger Strain Increments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8",
-   "metadata": {},
-   "source": [
-    "This example simulates isotropic hardening with larger strain increments (0 to 0.2). We will observe how the material responds under larger strain."
+    "## Example 2: Kinematic Hardening under Cyclic Loading\n",
+    "This example demonstrates the behavior of a kinematic hardening material under cyclic loading, with alternating strains to simulate the effect of loading and unloading."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "2f7ab7f9-bf2b-4729-b779-c03d4935b009",
    "metadata": {},
    "outputs": [],
    "source": [
-    "strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2\n",
-    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
-    "sig, ep, Y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10",
-   "metadata": {},
-   "source": [
-    "### Example 2 Output\n",
-    "This shows how the stress, plastic strain, and back stress evolve with larger strain increments."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11",
-   "metadata": {},
-   "source": [
-    "## Example 3: Kinematic Hardening with Multiple Strain Increments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "12",
-   "metadata": {},
-   "source": [
-    "Now, we simulate the behavior of a material with kinematic hardening over multiple strain increments."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from src.elastoplastic.elastoplastic_functions import KinematicHardeningModel\n",
+    "\n",
     "def run_kinematic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
     "    model = KinematicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    alpha_list = []\n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, alpha = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        alpha_list.append(alpha)\n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(alpha_list)\n",
+    "    sig, ep, alpha = model.compute_stress(strain_increments)\n",
+    "    return sig, ep, alpha\n",
     "\n",
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
-    "sig, ep, alpha"
+    "strain_increments = [0.003, -0.003] * 25  # Cyclic strain increments\n",
+    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
+    "sig[-1], ep[-1], alpha[-1]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "4067725d-bb7f-42ae-93ca-1136e4ab90e3",
    "metadata": {},
    "source": [
-    "### Example 3 Output\n",
-    "The following outputs show the evolution of stress, plastic strain, and back stress (alpha) over the strain increments."
+    "### Results from Example 2\n",
+    "The final stress, plastic strain, and kinematic hardening variable (alpha) are displayed after cyclic loading under kinematic hardening conditions."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "631aaf9e-c20d-48e3-8dff-d908b04c84e6",
    "metadata": {},
    "source": [
-    "## Example 4: Kinematic Hardening with Larger Strain Increments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16",
-   "metadata": {},
-   "source": [
-    "In this example, we use larger strain increments (0 to 0.2) for the kinematic hardening model and observe the material's response."
+    "## Example 3: Real-World Material (Mild Steel AISI 1008) Behavior under Isotropic Hardening\n",
+    "This example applies the isotropic hardening model to Mild Steel AISI 1008, which is commonly used in engineering applications. The material properties are based on known values for this type of steel."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "a5050a8b-d620-4b52-8e29-587106299b5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
-    "sig, ep, alpha"
+    "strain_increments = [0.001] * 50  # Small strain increments\n",
+    "My_mat = IsotropicHardeningModel(0, 0, 200e3, 50e3, 285, 50)\n",
+    "sig, ep, Y = My_mat.compute_stress(strain_increments)\n",
+    "sig[-1], ep[-1], Y[-1]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "d9db8d9f-cfa4-4f82-a94b-e5509f8ac24d",
    "metadata": {},
    "source": [
-    "### Example 4 Output\n",
-    "The output here shows how the stress, plastic strain, and back stress evolve with larger strain increments."
+    "### Results from Example 3\n",
+    "The stress, plastic strain, and hardening variable are computed for Mild Steel AISI 1008 under isotropic hardening conditions."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "f9c73272-1078-44d7-b357-10a4c3a1974a",
    "metadata": {},
    "source": [
-    "## Example 5: Comparison of Isotropic and Kinematic Hardening with Multiple Strain Increments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20",
-   "metadata": {},
-   "source": [
-    "In this example, we compare the isotropic and kinematic hardening models using the same strain increments to observe the differences in material behavior."
+    "## Example 4: Real-World Material (Aluminum 6061 T6) Behavior under Kinematic Hardening\n",
+    "This example demonstrates the kinematic hardening behavior of Aluminum 6061 T6, a commonly used material in engineering and aerospace applications."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "07c402ba-c015-42d1-9de9-8db6cc67fd12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "sig_iso, ep_iso, sig_kin, ep_kin"
+    "strain_increments = [0.003, -0.003] * 25  # Cyclic strain increments\n",
+    "My_mat = KinematicHardeningModel(0, 0, 0, 69000, 7000, 276, 50)\n",
+    "sig, ep, alpha = My_mat.compute_stress(strain_increments)\n",
+    "sig[-1], ep[-1], alpha[-1]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "f67d69e7-544f-4b72-8d57-d4e9334c9c84",
    "metadata": {},
    "source": [
-    "### Example 5 Output\n",
-    "Here we compare the final stress and plastic strain values for isotropic and kinematic hardening under the same strain increments."
+    "### Results from Example 4\n",
+    "The stress, plastic strain, and kinematic hardening variable (alpha) are displayed for Aluminum 6061 T6 under cyclic loading conditions."
    ]
   }
  ],
