--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -3,93 +3,111 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Isotropic and Kinematic Hardening Models\n",
-    "\n",
-    "This notebook demonstrates the use of isotropic and kinematic hardening models with multiple strain increments. It covers:\n",
-    "- Isotropic Hardening\n",
-    "- Kinematic Hardening\n",
-    "- Comparison of both models\n"
-   ]
+   "source": ["# Elasto-Plastic Tutorial"]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["This notebook demonstrates isotropic and kinematic hardening models using multiple strain increments."]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Add the project root to the Python path\n",
-    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
-    "\n",
     "import numpy as np\n",
-    "from src.elastoplastic import elastoplastic_functions as ef\n",
-    "\n",
-    "def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
-    "    \"\"\"Runs an example using the isotropic hardening model with multiple strain increments.\"\"\"\n",
-    "    model = ef.IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    Y_list = []\n",
-    "    \n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, Y = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        Y_list.append(Y)\n",
-    "        \n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(Y_list)\n",
-    "\n",
-    "def run_kinematic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
-    "    \"\"\"Runs an example using the kinematic hardening model with multiple strain increments.\"\"\"\n",
-    "    model = ef.KinematicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    alpha_list = []\n",
-    "    \n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, alpha = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        alpha_list.append(alpha)\n",
-    "        \n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(alpha_list)\n",
-    "\n",
-    "# Define strain increments\n",
-    "strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
-    "\n",
-    "# Example 1: Isotropic Hardening with multiple strain increments\n",
-    "print('Example 1: Isotropic Hardening with multiple strain increments')\n",
-    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 2: Isotropic Hardening with larger strain increments\n",
-    "print('\\nExample 2: Isotropic Hardening with larger strain increments')\n",
-    "strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2\n",
-    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 3: Kinematic Hardening with multiple strain increments\n",
-    "print('\\nExample 3: Kinematic Hardening with multiple strain increments')\n",
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 4: Kinematic Hardening with larger strain increments\n",
-    "print('\\nExample 4: Kinematic Hardening with larger strain increments')\n",
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions\n",
-    "print('\\nExample 5: Comparing Isotropic and Kinematic Hardening with multiple strain increments')\n",
-    "sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "print('Isotropic - Final Stress:', sig_iso[-1], 'Final Plastic Strain:', ep_iso[-1])\n",
-    "print('Kinematic - Final Stress:', sig_kin[-1], 'Final Plastic Strain:', ep_kin[-1])\n",
-    "\n",
-    "print('\\nTutorial Completed!')"
+    "from src.elastoplastic import elastoplastic_functions as ef"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## Example 1: Isotropic Hardening - Class Example Test\n",
+   "This example replicates an isotropic hardening material used in class to verify the code works correctly."]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strain_increments = np.linspace(0, 0.1, 10)\n",
+    "sig, ep, Y = ef.run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## Example 2: Kinematic Hardening - Class Example Test\n",
+   "This example runs a kinematic hardening material to verify the function works properly."]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig, ep, alpha = ef.run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## Example 3: Mild Steel AISI 1008 (Isotropic Hardening)\n",
+   "Mild steel exhibits isotropic hardening behavior. Properties:\n",
+   "- Elastic Modulus: 200 GPa\n",
+   "- Plastic Modulus: 50 GPa\n",
+   "- Yield Strength: 285 MPa"]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig, ep, Y = ef.run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=50e3, Y_0=285, strain_increments=strain_increments, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## Example 4: Aluminum 6061-T6 (Kinematic Hardening)\n",
+   "Aluminum used in sheet metal forming behaves with kinematic hardening. Properties:\n",
+   "- Elastic Modulus: 69 GPa\n",
+   "- Plastic Modulus: 7 GPa\n",
+   "- Yield Strength: 276 MPa"]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig, ep, alpha = ef.run_kinematic_example(sig_0=0, ep_0=0, E=69e3, H=7e3, Y_0=276, strain_increments=strain_increments, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## Example 5: Titanium (Isotropic Hardening)\n",
+   "Titanium (Grade 1) primarily exhibits isotropic hardening. Properties:\n",
+   "- Elastic Modulus: 120 GPa\n",
+   "- Plastic Modulus: 12 GPa\n",
+   "- Yield Strength: 240 MPa"]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig, ep, Y = ef.run_isotropic_example(sig_0=0, ep_0=0, E=120e3, H=12e3, Y_0=240, strain_increments=strain_increments, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## Tutorial Completed!"]
   }
  ],
  "metadata": {
@@ -107,7 +125,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "version": "3.8.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
